# portfolio

./: .env.example  .gitignore  Procfile  README.md  build.sh  pyproject.toml  requirements.txt
portfolio/: create_sample_post.py
portfolio/Blog/: admin.py  models.py  views.py
portfolio/Blog/migrations/: 0001_initial.py  0002_alter_blogpost_content.py
portfolio/Core/: admin.py  models.py  serializers.py  urls.py  views.py
portfolio/Core/migrations/: 0001_initial.py  0002_alter_projects_options_alter_skills_options_and_more.py  0003_alter_skills_skill_img.py  0004_projects_kaggle_link_alter_projects_live_link.py  0005_alter_projects_kaggle_link_alter_projects_name.py
portfolio/portfolio/: settings.py  urls.py
portfolio/static/css/: base.css  main.java  modern-styles.css  styles.css
portfolio/static/js/: app.js  base.js  particle-network.js
portfolio/templates/: base.html  blog.html  blog_detail.html  email.html  home.html
